<?xml version="1.0"?>
<package format="2">
  <name>vsemi_tof_ros</name>
  <version>1.3.0</version>
  <description>The vsemi_tof_ros package</description>
  <maintainer email="zhen@vsemi.io">Zhen Gao</maintainer>
  <license>Visionary Semiconductor Inc.</license>

  <url type="website">http://vsemi.io/</url>

  <author email="horace.li@vsemi.io">Horace Li</author>

  <buildtool_depend>catkin</buildtool_depend>  
  <build_export_depend>roscpp</build_export_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  
  <export>

  </export>
</package>
